[package]
name = "spector-core"
version = "0.0.1"
edition = "2021"
description = "Tooling and library for generation, validation and verification of supply chain metadata documents and frameworks"
repository = "https://github.com/kusaridev/spector"
license = "Apache-2.0"

[dependencies]
base64 = "0.21"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
