[package]
name = "spector-core"
version = "0.0.1"
edition = "2021"
description = "Tooling and library for generation, validation and verification of supply chain metadata documents and frameworks"
repository = "https://github.com/kusaridev/spector"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.70"
base64 = "0.21"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive"] }
jsonschema = "0.17.0"
prettyplease = "0.2.4"
schemars = { version = "0.8.12", features = ["chrono", "url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2.0.15"
typify = "0.0.14"
url = "2.2"

[dev-dependencies]
maplit = "1.0.2"
assert_cmd = "1.0"
predicates = "2.1"

[lib]
name = "spector"
path = "src/lib.rs"

[[bin]]
name = "spector"
path = "src/bin/bin.rs"
